# make-jobs-ai

./: .env.example  .gitignore  LICENSE  README.md  debug_city.txt  setup.bat  start.bat  start.vbs  stop.bat
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/routes/: applications.py  jobs.py  overview.py  preferences.py  recommendations.py  resumes.py  settings.py
backend/app/services/: browser_scraper.py  claude_service.py  jd_parser.py  job_recommender.py  matcher.py  platform_search.py  providers.py  resume_customizer.py  resume_file_parser.py  resume_profile_parser.py  serializers.py  url_fetcher.py
backend/app/services/detail_fetchers/: __init__.py  base.py  boss.py  generic.py  job51.py  liepin.py  linkedin.py  yingjiesheng.py  zhaopin.py
backend/app/services/features/: applications.py  import_jobs.py  job_list.py  match_analysis.py  recommendations.py
backend/app/services/scrapers/: __init__.py  base.py  boss_scraper.py  job51_scraper.py  liepin_scraper.py  linkedin_scraper.py  yingjiesheng_scraper.py  zhaopin_scraper.py
backend/app/static/: dashboard.html
docs/superpowers/plans/: 2026-05-22-clear-buttons.md
docs/superpowers/specs/: 2026-05-22-clear-buttons-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/lib/: api.js
frontend/src/styles/: app.css
