[project]
name = "make-jobs-ai-backend"
version = "0.1.0"
description = "Backend for AI job screening and resume tailoring"
requires-python = ">=3.8"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "anthropic>=0.49,<1.0",
  "sqlmodel>=0.0.22,<1.0",
  "python-dotenv>=1.0,<2.0",
  "httpx>=0.27,<1.0",
  "pypdf>=5.9,<6.0",
  "python-docx>=1.1,<2.0",
  "python-multipart>=0.0.20,<1.0",
  "playwright>=1.40,<2.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
